css/style.css
/* CSS reset */
* {
    margin: 0;
    padding: 0;
    border: 0;
}

/* CSS variables */
:root {
    --nav-icon-width: 50px;
    --colour-page-background: #cccccc;
    --colour-text-background: #444444;
    --colour-text-hover: #666666;
    --colour-green: #6a7a5f;
    --colour-green-dark: #4a5840;
    --colour-beige: #fdf8e4;
    --colour-brown: #8c7a5f;
}

/* HTML tag common styling */
html, body {
    height: 100%;
    margin: 0;
    font-family: sans-serif;
}

input {
    height: 24px;
    width: 264px;
    margin: 10px;
    padding: 0.5rem;
    border-radius: 4px;
}

input:focus {
    background-color: var(--colour-beige);
    outline: none;
}

select {
    height: 40px;
    width: 280px;
    margin: 10px;
    padding: 0 0.5rem;
    border-radius: 4px;
}

select option {
    padding: 0.5rem;
}

/* Entire page container */
#page-container {
    height: 100vh;
    width: 100%;
    display: flex;
    position: relative;
    background-color: var(--colour-page-background);
}

/* Navbar docked to left-side */
#nav {
    width: 320px;
    height: inherit;
    background-color: var(--colour-text-background);
}

#nav a {
    padding-left: 0.5rem;
}

.nav-title {
    padding: 1.2rem;
    color: white;
}

.nav-text {
    display: flex;
    align-items: center;
    color: white;
    text-decoration: none;
}

.nav-text:hover {
    background-color: var(--colour-text-hover);
    scale: 1.02;
}

.nav-icon {
    width: var(--nav-icon-width);
    height: var(--nav-icon-width);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
}

#nav-minimised {
    display: none;
    height: inherit;
    background-color: var(--colour-text-background);
    transition: var(--transition-duration);
}

/* Search form within navbar */
#search-container {
    display: flex;
    flex-flow: wrap;
    align-items: center;
    justify-content: start;
    padding: 10px;
}

#search-btn {
    margin: 10px;
    border-radius: 4px;
}

#search-btn:hover {
    background-color: var(--colour-green);
    color: white;
    cursor: pointer;
    scale: 1.1;
}

#search-btn:focus {
    outline: none;
}

#search-btn:active {
    background-color: var(--colour-green-dark);
}

#search-btn i {
    padding: 0.8rem;
}

/* Main section of page containing search results and map */
#main {
    display: grid;
    grid-template-columns: 1fr;
    height: inherit;
    width: 100%;
    padding: 0;
    overflow-y: auto;
}

/* Search results listed within this container */
#search-results-container {
    display: none;
    overflow-y: auto;
    min-width: 300px;
    background-color: var(--colour-green);
    color: white;
}

#search-results-container h2 {
    margin: 1rem 1.5rem;
}

.search-result {
    padding: 0.5rem 1.5rem 1rem 1.5rem;
    border-top: 1px solid var(--colour-green-dark);
}

.search-result:hover {
    cursor: pointer;
    background-color: var(--colour-green-dark);
    scale: 1.02;
}

.search-result h3 {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    padding: 0;
}

.search-result p {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    padding: 0;
}

.search-result ul {
    margin-top: 0;
    padding: 0;
}

.search-result ul li {
    margin-top: 0.5rem;
    list-style-type: none;
}

.search-result ul li a {
    color: white;
}

/* Map to display markers relating to search results */
#map {
    z-index: 0;
    height: 100%;
    width: 100%;
}

.leaflet-popup-content-wrapper {
    background-color: var(--colour-green);
}

.leaflet-popup-content > * {
    margin: 0.3rem 0 !important;
    color: white;
}

.leaflet-popup-content > p > a {
    color: white;
}

/* Chart */
#chart-container {
    z-index: 0;
    position: absolute;
    top: 40vh;
    left: -50%;
    margin-top: -10%;
    width: 50vw;
    background-color: var(--colour-text-hover);
}

#chart-no-data-title {
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
}

#chart-no-data-title > * {
    color: white;
}

#chart-title {
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
    padding: 30px 30px 0 30%;
}

#chart-title > * {
    color: var(--colour-green-dark);
}

#close-chart {
    font-size: 1.5rem;
}

#close-chart:hover {
    cursor: pointer;
}

.chart-displayed {
    animation: display-chart 1s linear forwards;
}

@keyframes display-chart {
    0% {transform: translateX(0) scaleY(0.05);}
    50% {transform: translateX(150%) scaleY(0.05);}
    100% {transform: translateX(150%) scaleY(1);}
}

/* Additional info section */
#info-container {
    max-height: 100%;
    width: 100%;
    padding: 0;
    background-color: var(--colour-green);
    display: none;
}

#close-info {
    font-size: 1.5rem;
    text-align: end;
    padding: 1rem 20px;
    background-color: var(--colour-green);
    color: white;
}

#close-info:hover {
    cursor: pointer;
}

.info-background {
    padding: 0 8rem;
    background-color: var(--colour-page-background);
}

.info-inner-container {
    max-height: 80vh;
    padding: 3rem 12rem;
    overflow-y: auto;
    background-color: white;
}

.info-inner-container > * {
    margin-bottom: 1.2rem;
    text-align: justify;
}

.info-inner-container h2, .info-inner-container h3 {
    color: var(--colour-green-dark);
}

.info-inner-container li {
    margin-left: 2rem;
}

.hygiene-ratings li {
    list-style-type: none;
    margin-left: 1rem;
}

/* Screen sizes 1280px and smaller */
@media (max-width: 1280px) {
    .info-background {
        padding: 0;
    }
    .info-inner-container {
        padding: 3rem 5rem;
    }
}

/* Screen sizes 960px and smaller */
@media (max-width: 960px) {
    #main {
        grid-template-columns: 1fr;
        grid-template-rows: 100vh;
    }
    #chart-container {
        margin-top: -10%;
        margin-left: -55%;
        width: 80vw;
    }
    #chart-title {
        padding: 20px 20px 0 10%;
    }
    .info-background {
        padding: 0;
    }
    .info-inner-container {
        padding: 3rem 4rem;
    }
}

/* Screen sizes 640px and smaller */
@media (max-width: 640px) {
    #main {
        grid-template-columns: 1fr;
        grid-template-rows: 100vh;
    }
    #results-icon-1, #map-icon-1, #chart-icon-1, #chart-icon-2, #info-icon-1 {
        display: none;
    }
    #search-results-container, #map {
        min-width: 100%;
        max-width: 100%;
    }
    #search-results-container h2 {
        font-size: 1.3rem;
        margin: 1rem 0.8rem 0.2rem 0.8rem;
    }
    .search-result {
        padding: 0.2rem 0.5rem 1rem 0.8rem;
    }
    .search-result h3, .search-result p, .search-result ul, .search-result ul li, .search-result ul li a {
        font-size: 0.9rem;
        margin: 0.2rem 0;
    }
    .leaflet-popup-content {
        margin: 0.5rem 0.8rem;
    }
    .leaflet-popup-content > * {
        margin: 0.1rem 0 !important;
    }
    .info-inner-container {
        padding: 3rem 2rem;
    }
    .info-inner-container > * {
        text-align: initial;
    }
}

